NetBSD Problem Report #7494
Received: (qmail 26152 invoked from network); 29 Apr 1999 03:36:25 -0000
Message-Id: <199904290333.UAA22253@frankenstein.flame.org>
Date: Wed, 28 Apr 1999 20:33:05 -0700 (PDT)
From: Michael Graff <explorer@flame.org>
Reply-To: explorer@flame.org
To: gnats-bugs@gnats.netbsd.org
Subject: raidctl lacks a "check clean bit" option.
X-Send-Pr-Version: 3.95
>Number: 7494
>Category: kern
>Synopsis: raidctl lacks a "check clean bit" option.
>Confidential: no
>Severity: serious
>Priority: high
>Responsible: oster
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Wed Apr 28 20:50:00 +0000 1999
>Closed-Date: Tue Aug 10 18:26:00 +0000 1999
>Last-Modified: Tue Aug 10 18:27:50 +0000 1999
>Originator: Michael Graff
>Release: 1.4_BETA
>Organization:
flame.org
>Environment:
System: NetBSD frankenstein.flame.org 1.3K NetBSD 1.3K (SONY) #0: Wed Mar 3 02:37:25 PST 1999 explorer@frankenstein.flame.org:/u0/OS/NetBSD/src/sys/arch/i386/compile/SONY i386
>Description:
raidctl -i always initiates a rewrite of parity on a raid device, even if
it is not needed. This should probably mimic the fsck method, with the
-i option meaning "only if needed" and -f included to force the issue.
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->oster
Responsible-Changed-By: fair
Responsible-Changed-When: Thu Apr 29 02:32:07 PDT 1999
Responsible-Changed-Why:
RAIDframe is Greg Oster's baby...
State-Changed-From-To: open->closed
State-Changed-By: oster
State-Changed-When: Tue Aug 10 11:26:00 PDT 1999
State-Changed-Why:
raidctl now sports options '-p' and '-P' for checking the 'parity clean bit'
and checking the 'parity clean bit' with rebuilding parity as necessary.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.