Add two more options to raidctl:   -p    check (and return) the status of the parity   -P    check the status of the parity, and rebuild if necessary

Addresses PR#7494